# itx-spec-kit

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
catalog/: index.json
docs/: architecture-adapters.md  architecture-maintenance.md  migration-guide.md  roadmap.md  tech-radar-program.md
docs/adr/: 0001-python-cross-platform-hooks.md  0002-tiered-gate-state-machine.md  0003-two-layer-quality-enforcement.md  README.md
extensions/itx-brownfield-workflows/: extension.yml
extensions/itx-gates/: extension.yml  requirements.txt
harnesses/docker-fallbacks/: docker-compose.yml
harnesses/temporal-fakes/: ANTIPATTERNS.md  README.md  process-compose.yaml  scenarios.schema.json  scenarios.yaml
init-scripts/: itx-init.ps1  itx-init.sh
presets/base/: constitution.md  decision-authority.yml  input-contracts.yml  notification-events.yml  pattern-index.md  policy.yml  preset.yml  smell-catalog.yml  (+1 more)
scripts/: build_catalog_artifacts.py  build_knowledge_manifest.py  build_pattern_index.py  itx_init.py  itx_specify.py  patch.py  release.py  tasks.ps1  validate_catalog.py
tests/: orchestrator_test_core.py  orchestrator_test_wave_c.py  test_architecture_wave_f.py  test_brownfield_extension_commands.py  test_itx_gates_command_docs.py  test_itx_gates_runtime_state.py  test_itx_init.py  test_mutation_wave_g.py  test_orchestrator.py  test_patch.py  test_release.py  test_saas_validator.py  test_sast_and_context_router.py  test_smell_mapping_h1.py  test_temporal_fakes_h2.py  test_validate_catalog.py
(+173 files in other folders)
